--- a/Source/Mosa.VisualStudio.Extension/source.extension.resx
+++ b/Source/Mosa.VisualStudio.Extension/source.extension.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="110" xml:space="preserve">
-    <value>Mosa.VisualStudio.VSIX</value>
+    <value>Mosa.VisualStudio.Extension</value>
   </data>
   <data name="112" xml:space="preserve">
     <value>A Visual Studio extension to support the MOSA Project.</value>
